# camel_up_python

./: .gitignore  Makefile  README.md  mermaid.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  install-python.sh
.github/workflows/: test.yml
camel_up/: __init__.py  actions.py  game.py  gym_env.py  gym_example.py  main.py  strategies.py
notebooks/: 1_number_of_legs_distribution.ipynb  2_roll_dice_vs_take_leader_and_random.ipynb  number_of_legs_distribution.ipynb
pytorch/: model.py
tests/: test_game.py  test_game_context.py  test_player_strategy.py
