[tool.isort]
profile = "black"
[tool.poetry]
name = "camel-up-python"
version = "0.1.0"
description = ""
authors = ["Jay Smallwood"]
readme = "README.md"
packages = [{include = "camel_up"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.12.0"
jupyterlab = "^3.5.3"
pycln = "^2.1.3"
pyright = "^1.1.291"
ruff = "^0.0.237"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
