[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camel-up"
version = "0.1.0"
description = ""
authors = [
    {name = "Jay Smallwood", email = "justin.d.smallwood@gmail.com"},
]
readme = "README.md"

[tool.setuptools.packages.find]
include = ["camel_up"]


